--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "utilibjs",
   "version": "0.0.0",
   "description": "My collection of most common used function in javascript. Most of them found in stackoverflow.",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "repository": {
     "type": "git",
@@ -27,6 +30,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.4.0",
     "babel-jest": "^29.4.3",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "typescript": "^4.9.5"
   }
 }
