--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "test": "jest --watchAll --verbose",
     "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "api": "jsdoc-to-readme --src lib/string-utils.js",
+    "toc": "markdown-toc -i README.md  --maxdepth 3",
+    "doc": "npm run api && npm run toc"
   },
   "repository": {
     "type": "git",
@@ -31,6 +34,8 @@
     "@types/jest": "^29.4.0",
     "babel-jest": "^29.4.3",
     "jest": "^29.4.3",
+    "jsdoc-to-readme": "^1.1.0",
+    "markdown-toc": "^1.2.0",
     "typescript": "^4.9.5"
   }
 }
